[gd_scene load_steps=5 format=3 uid="uid://b2a6vmqqi2gry"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_84vp6"]
[ext_resource type="Theme" uid="uid://tq2f5p13ryky" path="res://pause_menu.tres" id="1_ha51v"]

[sub_resource type="InputEventAction" id="InputEventAction_fb1lv"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_pr8qk"]
events = [SubResource("InputEventAction_fb1lv")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_84vp6")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn_computer" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_ha51v")
shortcut = SubResource("Shortcut_pr8qk")
text = "RESUME"

[node name="restart_btn_computer" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_ha51v")
text = "RESTART
"

[node name="quit_btn_computer" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_ha51v")
text = "QUIT GAME
"

[node name="pause_btn_mobile" type="TouchScreenButton" parent="menu_holder"]

[node name="quit_btn_mobile" type="TouchScreenButton" parent="menu_holder"]

[node name="restart_btn_mobile" type="TouchScreenButton" parent="menu_holder"]

[connection signal="pressed" from="menu_holder/resume_btn_computer" to="." method="_on_resume_btn_computer_pressed"]
[connection signal="pressed" from="menu_holder/restart_btn_computer" to="." method="_on_restart_btn_computer_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn_computer" to="." method="_on_quit_btn_computer_pressed"]
